--- a/WebContent/template.xhtml
+++ b/WebContent/template.xhtml
@@ -12,7 +12,12 @@
         <h:form>
             <p:menubar>
                 <p:menuitem value="Home" url="index.jsf"></p:menuitem>
+                <p:menuitem value="-" url="index.jsf"></p:menuitem>
                 <p:menuitem value="Gerenciar Hóspedes" url="crudhospede.jsf"></p:menuitem>
+                <p:menuitem value="-" url="index.jsf"></p:menuitem>
+                <p:menuitem value="Gerenciar Funcionários" url="crudfuncionario.jsf"></p:menuitem>
+                <p:menuitem value="-" url="index.jsf"></p:menuitem>
+                <p:menuitem value="Gerenciar Quartos" url="crudquarto.jsf"></p:menuitem>
             </p:menubar>
         </h:form>
         <hr/>
