--- a/WebContent/cadastrarhospede.xhtml
+++ b/WebContent/cadastrarhospede.xhtml
@@ -6,7 +6,7 @@
              xmlns:f="http://xmlns.jcp.org/jsf/core"
              xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
              template="template.xhtml">
-
+	
     <h:form>
         <p:fieldset legend="Hóspedes">
             <p:toolbar>
@@ -36,7 +36,7 @@
                         <p:outputLabel for="sexo" value="Sexo:"/>
                         <p:inputText id="sexo" value="#{hospedeBean.hospede.sexo}"/>
                         
-                        <p:outputLabel for="dtNascimento" value="Data de Nascimento:"/>
+                        <p:outputLabel for="dtNascimento" value="Nascimento:"/>
                         <p:inputText id="dtNascimento" value="#{hospedeBean.hospede.dtNascimento}"/>
                         
                         <p:outputLabel for="email" value="E-mail:"/>
