--- a/WebContent/crudquarto.xhtml
+++ b/WebContent/crudquarto.xhtml
@@ -8,13 +8,13 @@
              template="template.xhtml">
 
     <h:form>
-        <p:fieldset legend="Hóspedes">
+        <p:fieldset legend="Quartos">
             <p:toolbar>
                 <p:toolbarGroup>
                     <p:menubar>
-                		<p:menuitem value="Cadastrar" url="cadastrarhospede.jsf"></p:menuitem>
-                		<p:menuitem value="Pesquisar" url="listarhospede.jsf"></p:menuitem>
-                		<p:menuitem value="Remover" url="removerhospede.jsf"></p:menuitem>
+                		<p:menuitem value="Cadastrar" url="cadastrarquarto.jsf"></p:menuitem>
+                		<p:menuitem value="Pesquisar" url="listarquarto.jsf"></p:menuitem>
+                		<p:menuitem value="Remover" url="removerquarto.jsf"></p:menuitem>
             		</p:menubar>
                 </p:toolbarGroup>	
             </p:toolbar>
