Cadastrar e Remover (Funcionário, Hóspede, Quarto, Ocupação

--- a/WebContent/template.xhtml
+++ b/WebContent/template.xhtml
@@ -18,6 +18,8 @@
                 <p:menuitem value="Gerenciar Funcionários" url="crudfuncionario.jsf"></p:menuitem>
                 <p:menuitem value="-" url="index.jsf"></p:menuitem>
                 <p:menuitem value="Gerenciar Quartos" url="crudquarto.jsf"></p:menuitem>
+                <p:menuitem value="-" url="index.jsf"></p:menuitem>
+                <p:menuitem value="Gerenciar Ocupações" url="crudocupacao.jsf"></p:menuitem>
             </p:menubar>
         </h:form>
         <hr/>
