--- a/WebContent/crudocupacao.xhtml
+++ b/WebContent/crudocupacao.xhtml
@@ -8,13 +8,13 @@
              template="template.xhtml">
 
     <h:form>
-        <p:fieldset legend="Funcionários">
+        <p:fieldset legend="Ocupações">
             <p:toolbar>
                 <p:toolbarGroup>
                     <p:menubar>
-                		<p:menuitem value="Cadastrar" url="cadastrarfuncionario.jsf"></p:menuitem>
-                		<p:menuitem value="Pesquisar" url="listarfuncionario.jsf"></p:menuitem>
-                		<p:menuitem value="Remover" url="removerfuncionario.jsf"></p:menuitem>
+                		<p:menuitem value="Cadastrar" url="cadastrarocupacao.jsf"></p:menuitem>
+                		<p:menuitem value="Pesquisar" url="listarocupacao.jsf"></p:menuitem>
+                		<p:menuitem value="Remover" url="removerocupacao.jsf"></p:menuitem>
             		</p:menubar>
                 </p:toolbarGroup>	
             </p:toolbar>
